fixed issue where gradient cut off image

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -33,13 +33,14 @@ h1, h2, h3, p {
 }
 
 .gradient{
-  background: -moz-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(215,216,212,1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0.2)), color-stop(100%, rgba(215,216,212,1)));
-  background: -webkit-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(215,216,212,1) 100%);
-  background: -o-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(215,216,212,1) 100%);
-  background: -ms-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(215,216,212,1) 100%);
-  background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%, rgba(215,216,212,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#d7d8d4', GradientType=0 );
+  background: rgba(0,0,0,0.2);
+  background: -moz-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0.2)), color-stop(100%, rgba(255,255,255,0)));
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0) 100%);
+  background: -o-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0) 100%);
+  background: -ms-linear-gradient(top, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0) 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%, rgba(255,255,255,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=0 );
 }
 
 .header-nav {
